--- a/Host/NuclearEntropyCore/NuclearEntropyCore.vcxproj
+++ b/Host/NuclearEntropyCore/NuclearEntropyCore.vcxproj
@@ -95,7 +95,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>ATTD_BUILD_DLL;WIN32;_DEBUG;_WINDOWS;_USRDLL;NUCLEARENTROPYCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NUCENT_BUILD_DLL;WIN32;_DEBUG;_WINDOWS;_USRDLL;NUCLEARENTROPYCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>.\..;C:\Program Files (x86)\boost\boost_1_60_0</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>
@@ -121,7 +121,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>ATTD_BUILD_DLL;_DEBUG;_WINDOWS;_USRDLL;NUCLEARENTROPYCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NUCENT_BUILD_DLL;_DEBUG;_WINDOWS;_USRDLL;NUCLEARENTROPYCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>.\..;C:\Program Files (x86)\boost\boost_1_60_0</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
@@ -147,7 +147,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>ATTD_BUILD_DLL;WIN32;NDEBUG;_WINDOWS;_USRDLL;NUCLEARENTROPYCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NUCENT_BUILD_DLL;WIN32;NDEBUG;_WINDOWS;_USRDLL;NUCLEARENTROPYCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>.\..;C:\Program Files (x86)\boost\boost_1_60_0</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>
@@ -175,7 +175,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>ATTD_BUILD_DLL;NDEBUG;_WINDOWS;_USRDLL;NUCLEARENTROPYCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NUCENT_BUILD_DLL;NDEBUG;_WINDOWS;_USRDLL;NUCLEARENTROPYCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>.\..;C:\Program Files (x86)\boost\boost_1_60_0</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
